fix smooth scroll on mobile

--- a/project/assets/app/src/scss/_base.scss
+++ b/project/assets/app/src/scss/_base.scss
@@ -5,6 +5,7 @@ body {
   font-family: $ff-main;
   font-size: 16px;
   color: $brown;
+  overflow-x: hidden;
   overflow: overlay;
 
   &::-webkit-scrollbar {
